log
vie., 21 de abr. de 2023  2:35:29: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
9031142
vie., 21 de abr. de 2023  2:42:00: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|6
total_score: 15/70
265c305
vie., 21 de abr. de 2023  2:51:35: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b729210
